# lc-sdk-python

./: .env  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  base.html  base.md  changelog.md  requirements.txt  requirements.xt  setup.cfg
.github/workflows/: publish-to-pypi.yml  publish-to-testpypi.yml  python-app.yml  quality-checkup.yml
agent/: __init__.py
agent/rtm/: client.py
agent/web/: client.py
configs/: main.ini
configuration/: __init__.py  client.py  tests.py
customer/: __init__.py
customer/rtm/: client.py  customer_rtm.py
customer/web/: client.py
docs/: agent_rtm.html  agent_web.html  config.html  configuration_api.html  customer_rtm.html  customer_rtm.md  customer_web.html  customer_web.md  index.html  reports_api.html
docs/agent/: index.html
docs/agent/rtm/: base.html  index.html
docs/agent/web/: base.html  index.html
docs/agent_rtm/: base.html  index.html
docs/agent_rtm/api/: index.html  v33.html  v34.html  v35.html
docs/agent_web/: base.html  index.html
docs/agent_web/api/: index.html  v33.html  (+2 more)
docs/billing/: base.html  index.html
docs/configuration/: base.html  index.html
docs/customer/: index.html
docs/customer_rtm/: base.html  index.html
docs/customer_web/: base.html  index.html
docs/reports/: base.html  index.html
docs/tests/: index.html  test_agent_rtm_client.html  test_agent_web_client.html  test_configuration_api_client.html  test_customer_rtm_client.html  test_customer_web_client.html  test_helpers.html  test_reports_api_client.html  test_wh_parser.html  test_ws_client.html
docs/utils/: helpers.html  http_client.html  httpx_logger.html  index.html  structures.html  ws_client.html
docs/webhooks/: index.html  parser.html  v33.html  v34.html  v35.html
examples/: agent_rtm_example.py  agent_web_example.py  configuration_api_example.py  customer_rtm_example.py  customer_web_example.py  reports_api_example.py  webhooks_example.py
livechat/: __init__.py  config.py
livechat/agent/: __init__.py
livechat/billing/: __init__.py  base.py
livechat/configuration/: __init__.py  base.py  client.py
livechat/customer/: __init__.py
livechat/reports/: __init__.py  base.py  client.py
livechat/tests/: test_agent_rtm_client.py  test_agent_web_client.py  test_billing_api_client.py  test_configuration_api_client.py  test_customer_rtm_client.py  test_customer_web_client.py  test_helpers.py  test_reports_api_client.py  test_wh_parser.py  test_ws_client.py
livechat/utils/: async_ws_client.py  helpers.py  http_client.py  httpx_logger.py  structures.py  ws_client.py
livechat/webhooks/: parser.py  v33.py  v34.py  v35.py  v36.py  v37.py
tests/: test_agent_rtm_client.py  test_agent_web_client.py  test_configuration_api_client.py  test_customer_rtm_client.py  test_customer_web_client.py  test_helpers.py  test_ws_client.py
utils/: async_ws_client.py  helpers.py  tools.py  ws_client.py
(+95 files in other folders)
