[metadata]
name = lc-sdk-python
version = 0.1.1
description = Package which lets to work with LiveChat API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/livechat/lc-sdk-python
author = LiveChat
author_email = apiteam.qa@livechat.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages=["livechat"]
python_requires = >=3.6
install_requires =
         websocket-client==0.57.0
         requests ==2.25.1

[options.packages.find]
exclude =
         tests*
