[metadata]
name = lc-sdk-python
version = 0.4.1
description = Package which lets to work with LiveChat API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/livechat/lc-sdk-python
author = LiveChat
author_email = apiteam.qa@livechat.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
packages = find:
python_requires = >=3.10
install_requires =
         websocket-client==1.9.0
         httpx==0.28.1

[options.extras_require]
httpx = http2

[options.packages.find]
exclude =
         livechat.tests
